--- a/tasks.html
+++ b/tasks.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>Your Tasks</h1>
-<a href="newTask.html">Create a new task</a>
+<a href="baseform.html">Create a new task</a>
 </body>
 </html>
