--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			 </label>
 			 <br>
 
-			 <label>Password:<input type="text" name="password" id="password"></label><br>
+			 <label>Password:<input type="password" name="password" id="password"></label><br>
 
 			 <input type="button" name="login" value="Login" class="button" onclick="login()">
 			 </div>
