--- a/tasks.html
+++ b/tasks.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <h1>Your Tasks</h1>
+<ul id="list"></ul>
 <a href="baseform.html">Create a new task</a>
+
+<script src="pageScript.js"></script>
 </body>
 </html>
