--- a/baseform.html
+++ b/baseform.html
@@ -1,15 +1,19 @@
 <html>
-<body>
-<form>
-	Username:<br>
-	<input type="text" name="username"><br>
-	Password:<br>
-	<input type="password" name = "password"><br>
-	Amount:<br>
-	<input type="text" name="amount"><br>
-	Due Date:<br>
-	<input type="text" name="date"><br>
-	</form>
+	<body>
+		<script src="createTask.js"></script>
+		<form>
+			Username:<br>
+			<input type="text" name="username"><br>
+			Password:<br>
+			<input type="password" name = "password"><br>
+			Amount:<br>
+			<input type="text" name="amount"><br>
+			Due Date:<br>
+			<input type="text" name="date"><br>
+			</form>
+			</br>
+			<button type="button">Create task</button> 
+		</form>
 
-</body>
+	</body>
 </html>
