--- a/baseform.html
+++ b/baseform.html
@@ -1,15 +1,18 @@
 <html>
-<body>
-<form>
-	Username:<br>
-	<input type="text" name="username"><br>
-	Password:<br>
-	<input type="password" name = "password"><br>
-	Amount:<br>
-	<input type="text" name="amount"><br>
-	Due Date:<br>
-	<input type="text" name="date"><br>
-	</form>
+<body style="background-color:136F63">
+
+<div style="background-color:330077;width:300;margin: 0 auto;border-radius:25px;border-width:10px;border-style:solid;border-color:330077">
+<form style="margin:15 auto; width:200">
+<p style="color:FFFFFF; font-family:Trebuchet MS;">Username:<br>
+<input type="text" name="username" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
+Password:<br>
+<input type="password" name = "password" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
+Amount:<br>
+<input type="text" name="amount" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
+Due Date:<br>
+<input type="text" name="date" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
+</p>
+</form>
 
 </body>
 </html>
