Updated and added ID's for future reference

--- a/taskOutline.html
+++ b/taskOutline.html
@@ -3,8 +3,10 @@
 	<title></title>
 </head>
 <body>
-	<p>Task name</p>
-	<p>Task due date</p>
-	<button>Complete task</button>
+	<p id="taskName">Task name</p>
+	<p id="taskDueDate">Task due date</p>
+	<p id="money">Money on the line: </p>
+	<button id="completeButton">Complete task</button>
+	<script src="taskOutline.js"></script>
 </body>
 </html>
