--- a/baseform.html
+++ b/baseform.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+	<title>Motiv8</title>
+            <link rel="stylesheet" type="text/css"href="style.css">
 		<!-- Load the jQuery library, which we'll use to manipulate HTML elements with Javascript. -->
     	<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     	<!-- Load the Firebase library before loading the body. -->
@@ -9,24 +11,20 @@
 	    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
 
-	<body style="background-color:136F63">
-		<script src="createTask.js"></script>
-
-		<div style="background-color:330077;width:300;margin: 0 auto;border-radius:25px;border-width:10px;border-style:solid;border-color:330077">
-			<form id="submitTask" style="margin:15 auto; width:200">
-				<p style="color:FFFFFF; font-family:Trebuchet MS;">Task Name:<br>
-					<input type="text" id="" ="taskName" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>					
-					Amount:<br>
-					<input type="number" id="amount" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
-					Due Date:<br>
-					<input type="date" id="date" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
-					Due Time:<br>
-					<input type="time" id="time" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br><br>
-					<button id="submit">Submit</button>
-				</p>
-
-			</form>
-		</div>
-
-	</body>
+	    <body>
+        <div class="content-formbox">
+            <form class="forms">
+                <p class="text-std">
+                    Task Name:<br>
+                    <input type="text" name="taskName" class="input-boxes-std"><br><br>
+                    Amount:<br>
+                    <input type="number" name="amount" class="input-boxes-std"><br><br>
+                    Due Date:<br>
+                    <input type="date" name="date" class="input-boxes-std"><br><br>
+                    Due Time:<br>
+                    <input type="time" name="time" class="input-boxes-std"><br>
+                </p> 
+            </form>
+        </div>
+    </body>
 </html>
