--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 		<link rel="stylesheet" type="text/css"href="style.css">
 	</head>
 	<body>
-	 <div id="main">    
-		 <div id="login-div">
-			 <label><b style="font-size: 20px;">Email Address:<input type="text" name="username" id="username"><br>
+	 <div id="main" class="content-formbox">    
+		 <div id="login-div" class="forms">
+			 <label class= "text-std">Email Address:<br>
+				 <input type="text" name="username" id="username"  class="input-boxes-std"><br>
 			 </label>
 			 <br>
 
-			 <label>Password:<input type="password" name="password" id="password"></label><br>
+			 <label class = "text-std">Password:<br>
+				 <input type="password" name="password" id="password" class="input-boxes-std">
+				</label><br>
 
 			 <input type="button" name="login" value="Login" class="button" onclick="login()">
 			 </div>
@@ -23,18 +26,6 @@
 
 			<!-- Firebase stuff -->
 			<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
-			<script>
-			  // Initialize Firebase
-			  var config = {
-			    apiKey: "AIzaSyCT_YPaoJrDhHakq7DacUsGJEwXMUimktU",
-			    authDomain: "motiv8-27fda.firebaseapp.com",
-			    databaseURL: "https://motiv8-27fda.firebaseio.com",
-			    projectId: "motiv8-27fda",
-			    storageBucket: "motiv8-27fda.appspot.com",
-			    messagingSenderId: "42771272863"
-			  };
-			  firebase.initializeApp(config);
-			</script>
 			<!-- End of Firebase stuff -->
 
 			<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
