--- a/tasks.html
+++ b/tasks.html
@@ -1,11 +1,16 @@
 <html>
 <head>
-	<title></title>
+		<title>Motiv8</title>
+		<link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
 <h1>Your Tasks</h1>
-<ul id="list"></ul>
-<a href="baseform.html">Create a new task</a>
+<div class="task-contain">
+<ul id="list" class="form">
+	<li class="text-std">potatoes</li>
+</ul>
+</div>
+<button href="baseform.html" class="button" style="width:100px;margin:30px">Create task</a></button>
 
 <script src="pageScript.js"></script>
 </body>
