--- a/baseform.html
+++ b/baseform.html
@@ -15,11 +15,11 @@
 		<div style="background-color:330077;width:300;margin: 0 auto;border-radius:25px;border-width:10px;border-style:solid;border-color:330077">
 			<form id="submitTask" style="margin:15 auto; width:200">
 				<p style="color:FFFFFF; font-family:Trebuchet MS;">Task Name:<br>
-					<input type="text" id="" ="taskName" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>					
+					<input type="text" id="name" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>					
 					Amount:<br>
 					<input type="number" id="amount" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
 					Due Date:<br>
-					<input type="date" id="date" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
+					<input type="date" id="dueDate" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br>
 					Due Time:<br>
 					<input type="time" id="time" style="background-color:000F08;border-color:000000;color:FFFFFF;font-family:Trebuchet MS;height:28px;font-size:14;margin: 0 auto; width:200px;"><br><br>
 					<button id="submit">Submit</button>
