Pull task list from database and display them on browser console

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css"href="style.css">
 	</head>
 	<body>
-	 <div id="main" class="content-formbox">    
+	 <div id="main" class="content-login-formbox">    
 		 <div id="login-div" class="forms">
 			 <label class= "text-std">Email Address:<br>
 				 <input type="text" name="username" id="username"  class="input-boxes-std"><br>
