--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
 		<link rel="stylesheet" type="text/css"href="style.css">
 	</head>
 	<body>
-	 <div id="main" class="content-login-formbox">    
-		 <div id="login-div" class="forms">
-			 <label class= "text-std">Email Address:<br>
-				 <input type="text" name="username" id="username"  class="input-boxes-std"><br>
-			 </label>
-			 <br>
+		<div id= "status">
+			<p><label id="current-user">Not logged in</label></p>
+		</div>
+		<div id="main" class="content-login-formbox">    
+			<div id="login-div" class="forms">
+				<p>
+				<label class= "text-std">Email Address:
+					<input type="text" name="username" id="username" class="input-boxes-std">
+				</label>
+				</p>
 
-			 <label class = "text-std">Password:<br>
-				 <input type="password" name="password" id="password" class="input-boxes-std">
-				</label><br>
+				<p>
+				<label class = "text-std">Password:
+					<input type="password" name="password" id="password" class="input-boxes-std">
+				</label>
+				</p>
 
-			 <input type="button" name="login" value="Login" class="button" onclick="login()">
-			 </div>
+				<input type="button" name="login" value="Login" class="button" onclick="login()">
+				</div>
 
-			 <div id="logout-div">
-			 <p>you are logged in</p>
-			 <input type="button" name="logout" value="Logout" class="button"  onclick="logout()">
+				<div id="logout-div">
+				<p>You are logged in</p>
+				<input type="button" name="logout" value="Logout" class="button" onclick="logout()">
+				</div>
 			</div>
-
-			<!-- Firebase stuff -->
 			<script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
-			<!-- End of Firebase stuff -->
-
-			<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
 			<script src="script.js"></script>
-		</div>    
 	 </body>
 </html>
