--- a/tasks.html
+++ b/tasks.html
@@ -64,11 +64,14 @@
 					<input type="date" id="dueDate" class="input-boxes-std"><br><br>
 					Due Time:<br>
 					<input type="time" id="time" class="input-boxes-std"><br><br>
-					<button id="submit" onclick="hideFirst()" class="button">Submit</button>
+					<button disabled id="submit" onclick="hideFirst()" class="button">Submit</button>
 					<button id="cancel" onclick="hideFirst()" class="button">Cancel</button>
 				</p>
 
 			</form>
+			<div id="paypal-button"></div>
+  			<script src="https://www.paypalobjects.com/api/checkout.js"></script>
+  			<script src="paypalButton.js"></script>
 		</div>
 
 	</body>
