Add buttons for task completion

--- a/tasks.html
+++ b/tasks.html
@@ -16,7 +16,9 @@
 			<h1>Your Tasks</h1>
 			<div class="task-contain">
 				<ul id="list" class="form">
-					<li class="text-std">potatoes</li>
+					<li class="text-std">
+						potatoes
+					</li>
 				</ul>
 			</div>
 			<button class="button" style="width:100px;margin:30px" onclick="hideFirst()">Create task</a></button>
