--- a/tasks.html
+++ b/tasks.html
@@ -66,14 +66,18 @@
 					<input type="date" id="dueDate" class="input-boxes-std"><br><br>
 					Due Time:<br>
 					<input type="time" id="time" class="input-boxes-std"><br><br>
-					<button disabled id="submit" onclick="hideFirst()" class="button">Submit</button>
+					<div id="paypal-button"></div>
+					<p id="confirmation"></p>
+					<button id="submit" onclick="hideFirst()" class="button">Submit</button>
 					<button id="cancel" onclick="hideFirst()" class="button">Cancel</button>
 				</p>
 
 			</form>
-			<div id="paypal-button"></div>
   			<script src="https://www.paypalobjects.com/api/checkout.js"></script>
   			<script src="paypalButton.js"></script>
+  			<script>
+  				document.querySelector('#submit').style.opacity=0.5;
+  			</script>
 		</div>
 
 	</body>
