buggy implementation of complete buttons

--- a/tasks.html
+++ b/tasks.html
@@ -66,7 +66,7 @@
 					<input type="date" id="dueDate" class="input-boxes-std"><br><br>
 					Due Time:<br>
 					<input type="time" id="time" class="input-boxes-std"><br><br>
-					<button disabled id="submit" onclick="hideFirst()" class="button">Submit</button>
+					<button id="submit" onclick="hideFirst()" class="button">Submit</button>
 					<button id="cancel" onclick="hideFirst()" class="button">Cancel</button>
 				</p>
 
