--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Motiv8</title>
 		<link rel="stylesheet" type="text/css"href="style.css">
 	</head>
-	<body>
+	<body background="images/Background.png">
 		<div id= "status">
 			<p><label id="current-user">Not logged in</label></p>
 		</div>
