--- a/tasks.html
+++ b/tasks.html
@@ -10,7 +10,8 @@
 	    <!-- Load the jQuery library, which we'll use to manipulate HTML elements with Javascript. -->
 	    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
-	<body>
+	<img src="images/logo-750.png" style="height:50px;width:200px;">
+	<body background="images/Background.png">
 		<script src="loadTasks.js"></script>
 		<div id="myDiv">
 			<h1>Your Tasks</h1>
@@ -53,7 +54,7 @@
 	    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
 
-	<body>
+	<body background="images/Background.png">
 		<script src="createTask.js"></script>
 
 		<div class="content-formbox" id="baseform" style="display:none">
@@ -68,7 +69,7 @@
 					<input type="time" id="time" class="input-boxes-std"><br><br>
 					<div id="paypal-button"></div>
 					<p id="confirmation"></p>
-					<button id="submit" onclick="hideFirst()" class="button">Submit</button>
+					<button id="submit" onclick="hideFirst();" class="button">Submit</button>
 					<button id="cancel" onclick="hideFirst()" class="button">Cancel</button>
 				</p>
 
