--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Motiv8</title>
+		<title>Motiv8 | Home</title>
+		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css"href="style.css">
 	</head>
 	<body background="images/Background.png">
