--- a/tasks.html
+++ b/tasks.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-		<title>Motiv8</title>
+		<title>Motiv8 | Tasks</title>
+		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css"href="style.css">
 		<!-- Load the jQuery library, which we'll use to manipulate HTML elements with Javascript. -->
     	<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
