--- a/tasks.html
+++ b/tasks.html
@@ -12,7 +12,9 @@
 	    <!-- Load the jQuery library, which we'll use to manipulate HTML elements with Javascript. -->
 	    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	</head>
-	<img src="images/logo-750.png" style="height:50px;width:200px;">
+	<div id="header-logo">
+		<img src="images/logo-750.png" style="height:80px;width:252px;">
+	</div>
 	<body background="images/Background.png">
 		<script src="loadTasks.js"></script>
 		<div id="myDiv">
